added bootstrap.responsive and a little SEO

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
        More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
-  <meta name="description" content="">
+  <link rel="icon" href="http://haxe.org/img/haxe2/favicon.ico" type="image/x-icon"/>
+
+  <title>Try Haxe !</title>
+  <meta name="description" content="Test the Haxe programming language online...">
   <meta name="author" content="">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
@@ -21,6 +23,8 @@
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.min.css" />
+  
   <link rel="stylesheet" href="lib/CodeMirror2/lib/codemirror.css"/>
   <link rel="stylesheet" href="lib/CodeMirror2/theme/cobalt.css"/>
   <link rel="stylesheet" href="style.css"/>
