--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="row-fluid">
       <div class="compiler-in span6">
           <div class="btn-group pull-right">
-              <a href="#" class="compile-btn btn"><i class="icon-cog"></i> Run</a>
+              <a href="#" class="compile-btn btn" data-loading-text="Compiling"><i class="icon-cog"></i> Run</a>
           </div>
           <ul class="nav nav-tabs">
                 <li class="active"><a href="#hx-source" data-toggle="tab">Source</a></li>
