--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.min.css" />
   
   <link rel="stylesheet" href="lib/CodeMirror2/lib/codemirror.css"/>
+  <link rel="stylesheet" href="lib/CodeMirror2/lib/util/simple-hint.css"/>
   <link rel="stylesheet" href="lib/CodeMirror2/theme/cobalt.css"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
@@ -105,6 +106,7 @@ class Test {
   <!-- scripts concatenated and minified via build script -->
   <script src="lib/CodeMirror2/lib/codemirror.js"></script>
   <script src="lib/CodeMirror2/mode/javascript/javascript.js"></script>
+  <script src="lib/CodeMirror2/lib/util/simple-hint.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js" ></script>
   <script src="app.js"></script>
   <!-- end scripts -->
