--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div class="row-fluid">
       <div class="compiler-in span6">
           <div class="btn-group pull-right">
+
               <a href="#" class="compile-btn btn" data-loading-text="Compiling"><i class="icon-cog"></i> Run</a>
           </div>
           <ul class="nav nav-tabs">
@@ -91,7 +92,13 @@ class Test {
           
         </div>
 
-      </div>  
+      </div>
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="pull-right"><span class="help-inline">r4796</span></div>
+        </div>
+        </div>
+
     </div>
   </div>
 
