--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
   <link rel="stylesheet" href="lib/CodeMirror2/lib/codemirror.css"/>
   <link rel="stylesheet" href="lib/CodeMirror2/lib/util/simple-hint.css"/>
-  <link rel="stylesheet" href="lib/CodeMirror2/theme/cobalt.css"/>
+  <link rel="stylesheet" href="lib/CodeMirror2/theme/rubyblue.css"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 
@@ -61,7 +61,7 @@ class Test {
           <hr/>
           <ul>
             <li><strong><a href="http://haxe.org" target="_blank" title="Haxe">Check it out here !</a></strong></li>
-            <li>If you're more into <strong>Javascript</strong>, check <strong><a href="http://haxe.org" target="_blank" title="Haxe">HaxeJS.org</a></strong></li> 
+            <li>If you're more into <strong>Javascript</strong>, check <strong><a href="http://haxejs.org" target="_blank" title="Haxe">HaxeJS.org</a></strong></li> 
             <li><strong>try-haxe</strong>'s source code is <strong><a href="https://github.com/clemos/try-haxe" title="Try-Haxe">available on github</a></strong>. Of course, it's written in Haxe ;)</li>
           </ul>
           
