--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@ class Test {
   public static function main(){
   	new js.JQuery("body").html("Haxe is great :)");
   }
-}
-              </textarea>
+}</textarea>
               
             </div>
 
