--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@ class Test {
   <!-- scripts concatenated and minified via build script -->
   <script src="lib/CodeMirror2/lib/codemirror.js"></script>
   <script src="lib/CodeMirror2/mode/javascript/javascript.js"></script>
-  <script src="lib/CodeMirror2/lib/util/simple-hint.js"></script>
+  <script src="lib/haxe-hint.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js" ></script>
   <script src="app.js"></script>
   <!-- end scripts -->
-  
+
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
