more catchy description :)

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <link rel="icon" href="http://haxe.org/img/haxe2/favicon.ico" type="image/x-icon"/>
 
-  <title>Try Haxe !</title>
-  <meta name="description" content="Test the Haxe programming language online...">
+  <title>Try Haxe!</title>
+  <meta name="description" content="Haxe is an amazing multiplatform programming language. Check it out!">
   <meta name="author" content="">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
