inlined source + added actuate to js

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ class Test {
         <div class="tab-content">
           <div class="tab-pane js-output active" id="js-output">
             <div class="well">
-      				<iframe class="js-run" src="about:blank" name="js-run" frameborder="no">
+      				<iframe class="js-run" src="about:blank" name="js-run" frameborder="no" scrolling="no">
       				</iframe>
             </div>
             
