--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
               <textarea name="hx-source" class="code haxe-source" rows="10">
 class Test {
   public static function main(){
+    #if js
   	new js.JQuery("body").html("Haxe is great :)");
+    #elseif flash
+    trace("Haxe is great :)");
+    #end
   }
 }</textarea>
               
