--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ class Test {
       </div>
       <div class="compiler-out span6">
         <div class="btn-group pull-right">
-          <a href="#" class="link-btn btn disabled"><i class="icon-share"></i> Link</a>
+          <a href="#" target="_blank" class="link-btn btn disabled"><i class="icon-share"></i> Link</a>
           <a href="#" class="fullscreen-btn btn disabled"><i class="icon-resize-full"></i> Fullscreen</a>
         </div>
         
