macos chrome css bugfix...

--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@ class Test {
           
       </div>
       <div class="compiler-out span6">
-        <div class="btn-group pull-right">
+        <div class=" pull-right">
           <a href="#" target="_blank" class="link-btn btn disabled"><i class="icon-share"></i> Link</a>
+      <!--  </div>
+        <div class=" pull-right">-->
           <a href="#" class="fullscreen-btn btn disabled"><i class="icon-resize-full"></i> Fullscreen</a>
         </div>
         
