--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
   <title>Try Haxe !</title>
   <meta name="description" content="Haxe is an amazing multiplatform programming language. Check it out !">
-  <meta name="author" content="">
+  <meta name="author" content="cl3mos@gmail.com">
+  <meta property="og:image" content="http://haxe.org/file/homeBanner.jpg" />
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
