--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 
-<body data-gateway="app/">
+<body data-api="app">
  
   <div role="main" class="container-fluid">
     <div class="row-fluid">
