--- a/index.html
+++ b/index.html
@@ -92,7 +92,20 @@ class Test {
             <li>If you're more into <strong>Javascript</strong>, check <strong><a href="http://haxejs.org" target="_blank" title="Haxe">HaxeJS.org</a></strong></li> 
             <li><strong>try-haxe</strong>'s source code is <strong><a href="https://github.com/clemos/try-haxe" title="Try-Haxe">available on github</a></strong>. Of course, it's written in Haxe ;)</li>
           </ul>
+          <!-- Place this tag where you want the +1 button to render -->
           
+            <div class="span2 span-hn">
+              <iframe frameborder="no" scrolling="no" height="50px" width="100px" src="http://hnlike.com/upvote.php?link=http%3A%2F%2Ftry.haxe.org&title=Try+Haxe+%21">iframes not supported by your browser</iframe>
+            </div>
+
+            <div class="span2 span-plusone">
+              <g:plusone size="medium"></g:plusone>
+            </div>
+
+            <div class="span2 span-fb">
+              <div class="fb-like" data-send="true" data-layout="button_count" data-width="100" data-show-faces="true"></div>
+          
+        </div>
       </div>
       <div class="compiler-out span6">
         <div class=" pull-right">
@@ -171,6 +184,25 @@ class Test {
   })();
 
 </script>
+
+<!-- Place this render call where appropriate -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=114114245328430";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
