--- a/index.html
+++ b/index.html
@@ -95,11 +95,15 @@ class Test {
           <!-- Place this tag where you want the +1 button to render -->
           
             <div class="span2 span-hn">
-              <iframe frameborder="no" scrolling="no" height="50px" width="100px" src="http://hnlike.com/upvote.php?link=http%3A%2F%2Ftry.haxe.org&title=Try+Haxe+%21">iframes not supported by your browser</iframe>
+              <iframe frameborder="no" scrolling="no" height="36px" width="100px" src="http://hnlike.com/upvote.php?link=http%3A%2F%2Ftry.haxe.org&title=Try+Haxe+%21">iframes not supported by your browser</iframe>
             </div>
 
             <div class="span2 span-plusone">
               <g:plusone size="medium"></g:plusone>
+            </div>
+
+            <div class="span2 span-twitter">
+              <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
             </div>
 
             <div class="span2 span-fb">
@@ -193,6 +197,8 @@ class Test {
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
