switched back to cobalt theme :p

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="lib/CodeMirror2/lib/codemirror.css"/>
   <link rel="stylesheet" href="lib/CodeMirror2/lib/util/simple-hint.css"/>
   <link rel="stylesheet" href="lib/CodeMirror2/theme/rubyblue.css"/>
+  <link rel="stylesheet" href="lib/CodeMirror2/theme/cobalt.css"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 
