fixed plus one button

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ class Test {
           <!-- Place this tag where you want the +1 button to render -->
 
             <div class="span2 span-plusone">
-              <g:plusone size="medium"></g:plusone>
+              <g:plusone size="medium" href="http://try.haxe.org"></g:plusone>
             </div>
 
             <div class="span2 span-twitter">
