--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     	  	  <div class="tab-pane hx-source active" id="hx-source">
               <textarea name="hx-source" class="code haxe-source" rows="10">
 class Test {
-  public static function main(){
+  static function main(){
     #if js
   	new js.JQuery("body").html("Haxe is great :)");
     #elseif flash
