--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="lib/CodeMirror2/lib/util/simple-hint.css"/>
   <link rel="stylesheet" href="lib/CodeMirror2/theme/rubyblue.css"/>
   <link rel="stylesheet" href="lib/CodeMirror2/theme/cobalt.css"/>
+  <link rel="stylesheet" href="lib/CodeMirror2/theme/default.css"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 
