--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ class Test {
 
   <!-- scripts concatenated and minified via build script -->
   <script src="lib/CodeMirror2/lib/codemirror.js"></script>
+  <script src="lib/CodeMirror2/mode/haxe/haxe.js"></script>
   <script src="lib/CodeMirror2/mode/javascript/javascript.js"></script>
   <script src="lib/haxe-hint.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js" ></script>
