--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ class Test {
       </div>
       <div class="row-fluid">
         <div class="span12">
-          <div class="pull-right"><span class="help-inline">2.10 release</span></div>
+          <div class="pull-right"><span class="help-inline">3.0 rc</span></div>
         </div>
         
       </div>
