--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ class Test {
       </div>
       <div class="row-fluid">
         <div class="span12">
-          <div class="pull-right"><span class="help-inline">3.1.0 1c25e98</span></div>
+          <div class="pull-right"><span class="help-inline">3.1.2 9e423e</span></div>
         </div>
         
       </div>
