--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ class Test {
         </div>
         
         <ul class="nav nav-tabs">
-              <li class="active"><a href="#js-output" data-toggle="tab">Output</a></li>
+              <li class="active"><a href="#js-output" data-toggle="tab" id="output">Output</a></li>
               <li><a href="#js-source" data-toggle="tab">JS Source</a></li>
               
         </ul>
