Fix GitHub spelling

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ class Test {
           <hr/>
           <ul>
             <li><strong><a href="http://haxe.org" target="_blank" title="Haxe">Check it out here !</a></strong></li>
-            <li><strong>try-haxe</strong>'s source code is <strong><a href="https://github.com/clemos/try-haxe" title="Try-Haxe">available on github</a></strong>. Of course, it's written in Haxe ;)</li>
+            <li><strong>try-haxe</strong>'s source code is <strong><a href="https://github.com/clemos/try-haxe" title="Try-Haxe">available on GitHub</a></strong>. Of course, it's written in Haxe ;)</li>
           </ul>
           <!-- Place this tag where you want the +1 button to render -->
          
