--- a/index.html
+++ b/index.html
@@ -65,28 +65,32 @@
           </ul>
           <div class="tab-content">
     	  	  <div class="tab-pane hx-source active" id="hx-source">
-				<div class="form-group">
-				  Examples: 
-				  <select class="form-control" id="hx-example-select">
-					<option value="1">Hello world</option>
-					<option value="2">Inheritance</option>
-					<option value="17">Generic types</option>
-					<option value="3">Enums</option>
-					<option value="4">Maps</option>
-					<option value="5">Abstracts</option>
-					<option value="6">Static Extension</option>
-					<option value="7">String interpolation</option>
-					<option value="8">Array Comprehension</option>
-					<option value="9">Pattern Matching</option>
-					<option value="10">Iterators</option>
-					<option value="11">Function Bindings</option>
-					<option value="12">Metadata</option>
-					<option value="13">Access Control</option>
-					<option value="14">Inline constructors</option>
-					<option value="15">Conditional compilation</option>
-					<option value="16">StringTools</option>
-				  </select>
-				</div>
+              <div class="form-horizontal">
+        				<div class="control-group">
+        				  <label class="control-label" for="hx-example-select">Examples</label>
+                  <div class="controls">
+          				  <select id="hx-example-select">
+            					<option value="1">Hello world</option>
+            					<option value="2">Inheritance</option>
+            					<option value="17">Generic types</option>
+            					<option value="3">Enums</option>
+            					<option value="4">Maps</option>
+            					<option value="5">Abstracts</option>
+            					<option value="6">Static Extension</option>
+            					<option value="7">String interpolation</option>
+            					<option value="8">Array Comprehension</option>
+            					<option value="9">Pattern Matching</option>
+            					<option value="10">Iterators</option>
+            					<option value="11">Function Bindings</option>
+            					<option value="12">Metadata</option>
+            					<option value="13">Access Control</option>
+            					<option value="14">Inline constructors</option>
+            					<option value="15">Conditional compilation</option>
+            					<option value="16">StringTools</option>
+          				  </select>
+                  </div>
+        				</div>
+              </div>
               <textarea name="hx-source" class="code haxe-source" rows="15">
 class Test {
     static function main() {
