--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ class Test {
       <div class="row-fluid">
         <div class="span12">
           <span class="help-inline">Disclaimer: The code you enter on Try-Haxe is compiled and saved on our servers.</span>
-          <div class="pull-right"><span class="help-inline">Haxe version: 3.1.2 9e423e</span></div>
+          <div class="pull-right"><span class="help-inline">Haxe version: 3.1.3 rel</span></div>
         </div>
         
       </div>
