minor design fixes

--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@ class Test {
           </div>
 		</div>
 		 <div class="social">
-			<div class="span2 span-plusone">
+			<div class="span3 span-plusone">
 			  <g:plusone size="medium" href="http://try.haxe.org"></g:plusone>
 			</div>
 
-			<div class="span2 span-twitter">
+			<div class="span3 span-twitter">
 			  <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
 			</div>
 
-			<div class="span2 span-fb">
+			<div class="span3 span-fb">
 			  <div class="fb-like" data-send="true" data-layout="button_count" data-width="100" data-show-faces="true"></div>
 			</div>
 		</div>
@@ -188,7 +188,7 @@ class Test {
       <div class="row-fluid">
         <div class="span12">
           <span class="help-inline">Disclaimer: The code you enter on Try-Haxe is compiled and saved on our servers.</span>
-          <div class="pull-right"><span class="help-inline">Haxe version: 3.1.3 rel</span></div>
+          <div class="pull-right"><span class="help-inline">Haxe version: 3.1.3 rel.</span></div>
         </div>
         
       </div>
