--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             					<option value="6">Static Extension</option>
             					<option value="7">String interpolation</option>
             					<option value="8">Array Comprehension</option>
-            					<option value="9">Pattern Matching</option>
+            					<option value="9">Pattern Matching - Array matching</option>
+            					<option value="18">Pattern Matching - Enum matching</option>
             					<option value="10">Iterators</option>
             					<option value="11">Function Bindings</option>
             					<option value="12">Metadata</option>
