integrated embed feature, rewrote '/app' to '/', few stuff

--- a/assets/templates.html
+++ b/assets/templates.html
@@ -24,7 +24,7 @@
 				font-size: 14px;
 				font-family: "Open Sans", sans-serif;
 				color: #1E1E1E;
-				overflow-y: scroll;
+				overflow-y: auto;
 			}
 			
 			pre {
