--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="http://www.haxe.org/favicon.ico" />
 </head>
 
-<body data-api="app">
+<body data-api=".">
   <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
 		<div class="pull-right">
@@ -163,7 +163,7 @@ class Test {
         <ul class="nav nav-tabs">
               <li class="active"><a href="#js-output" data-toggle="tab" id="output">Output</a></li>
               <li><a href="#js-source" data-toggle="tab">JS Source</a></li>
-              
+              <li><a href="#embed-source" data-toggle="tab">Embed</a></li>
         </ul>
 
         <div class="tab-content">
@@ -178,6 +178,14 @@ class Test {
           <div class="tab-pane js-source" id="js-source">
             <textarea name="js-source" class="code js-source">
             </textarea>
+          </div>
+          <div class="tab-pane embed-source" id="embed-source">
+            <h4>Code</h4>
+            <textarea name="embed-source" class="code embed-source">
+            </textarea>
+            <h4>Preview</h4>
+            <div class="embed-preview" id="embed-preview">
+            </div>
           </div>
         </div>
         
@@ -210,6 +218,9 @@ class Test {
   <script src="lib/CodeMirror-4/addon/hint/show-hint.js"></script>
   <script src="lib/CodeMirror-4/mode/haxe/haxe.js"></script>
   <script src="lib/CodeMirror-4/mode/javascript/javascript.js"></script>
+  <script src="lib/CodeMirror-4/mode/xml/xml.js"></script>
+  <script src="lib/CodeMirror-4/mode/css/css.js"></script>
+  <script src="lib/CodeMirror-4/mode/htmlmixed/htmlmixed.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js" ></script>
 <script src="lib/CodeMirror-4/addon/search/searchcursor.js"></script>
 	<script src="lib/CodeMirror-4/addon/search/search.js"></script>
