--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@ class Test {
 
             <div class="tab-pane hx-options" id="hx-options">
               <form id="hx-options-form" class="form-horizontal">
+                  <div class="control-group hx-main-name">
+                    <label class="control-label" for="main-class">Main class</label>
+                    <div class="controls">
+                      <input type="text" name="main" value="Test"></input>
+                    </div>
+                  </div>
                   <div class="control-group hx-targets">
                     <label class="control-label" for="libs-checkbox">Target</label>
                     
