Added example to dropdown in html

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             					<option value="10">Iterators</option>
             					<option value="11">Function Bindings</option>
             					<option value="12">Metadata</option>
+            					<option value="19">Load Json using Http</option>
             					<option value="13">Access Control</option>
             					<option value="14">Inline constructors</option>
             					<option value="15">Conditional compilation</option>
