Added example 20 to dropdown in html

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             					<option value="14">Inline constructors</option>
             					<option value="15">Conditional compilation</option>
             					<option value="16">StringTools</option>
+            					<option value="20">Drawing</option>
           				  </select>
                   </div>
         				</div>
