dce help in new window

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ class Test {
                     
                   </div>
                   <div class="control-group hx-dce-name">
-                    <label class="control-label" for="main-class"><a href="http://haxe.org/manual/cr-dce.html">DCE</a></label>
+                    <label class="control-label" for="main-class"><a href="http://haxe.org/manual/cr-dce.html" target="_blank">DCE</a></label>
                     <div class="controls">
 						
                       <label class="radio"><input type="radio" name="dce" value="full" checked></input> full</label>
