--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ class Test {
 						
                       <label class="radio"><input type="radio" name="dce" value="full" checked></input> full</label>
                       <label class="radio"><input type="radio" name="dce" value="no"></input> no</label>
+                      <label class="radio"><input type="radio" name="dce" value="std"></input> std</label>
 					  
                     </div>
                   </div>
