Added example-21 to dropdown

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             					<option value="7">String interpolation</option>
             					<option value="8">Array Comprehension</option>
             					<option value="9">Pattern Matching - Array matching</option>
+            					<option value="21">Pattern Matching - Structure matching</option>
             					<option value="18">Pattern Matching - Enum matching</option>
             					<option value="10">Iterators</option>
             					<option value="11">Function Bindings</option>
