--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ class Test {
       <div class="row-fluid">
         <div class="span12">
           <span class="help-inline">Disclaimer: The code you enter on Try-Haxe is compiled and saved on our servers.</span>
-          <div class="pull-right"><span class="help-inline">Haxe version: 3.2.0 RC2</span></div>
+          <div class="pull-right"><span class="help-inline">Haxe version: 3.2.0 release</span></div>
         </div>
 
       </div>
