full width buttons for mobile, attempt to fix vertical resize

--- a/index.html
+++ b/index.html
@@ -126,9 +126,7 @@
     <div class="row-fluid">
       <div class="span6">
         <div class="compiler-in">
-          <div class="btn-group pull-right">
-            <a href="#" class="compile-btn btn" data-loading-text="Compiling"><i class="fa fa-cog"></i> Build + Run</a>
-          </div>
+          <a href="#" class="compile-btn btn side-btn" data-loading-text="Compiling"><i class="fa fa-cog"></i> Build + Run</a>
           <ul class="nav nav-tabs">
             <li class="active"><a href="#hx-source" data-toggle="tab">Source</a></li>
             <li><a href="#hx-options" data-toggle="tab">Options</a></li>
@@ -206,13 +204,7 @@ class Test {
       </div>
 
       <div class="compiler-out span6">
-        <div class=" pull-right">
-          <a href="#" target="_blank" class="link-btn btn disabled"><i class="fa fa-share"></i> Run standalone</a>
-      <!--  </div>
-        <div class=" pull-right">-->
-          <!--a href="#" class="fullscreen-btn btn disabled"><i class="icon-resize-full"></i> Fullscreen</a-->
-        </div>
-
+        <a href="#" target="_blank" class="link-btn btn disabled side-btn"><i class="fa fa-share"></i> Run standalone</a>
         <ul class="nav nav-tabs">
               <li class="active"><a href="#js-output" data-toggle="tab" id="output">Output</a></li>
               <li><a href="#js-source" data-toggle="tab">JS Source</a></li>
