--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
   <title>Try Haxe !</title>
   <meta name="description" content="Haxe is an amazing multiplatform programming language. Check it out !">
-  <meta name="author" content="cl3mos@gmail.com">
+  <meta name="author" content="Haxe Foundation">
   <meta property="og:image" content="http://try.haxe.org/share.png" />
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-	<link rel="stylesheet" type="text/css" href="http://haxe.org/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="http://haxe.org/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.min.css" />
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
