add code cookbook link

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 							<li class="divider"></li>
 							<li class="active"><a href="http://try.haxe.org">Try Haxe</a></li>
 							<li><a href="http://lib.haxe.org">Haxelib</a></li>
+							<li><a href="http://code.haxe.org">Code Cookbook</a></li>
 						</ul>
 					</li>
 					<li class=" dropdown">
