--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <title>Try Haxe !</title>
   <meta name="description" content="Haxe is an amazing multiplatform programming language. Check it out !">
-  <meta name="author" content="Haxe Foundation">
+  <meta name="author" content="Haxe Community">
   <meta property="og:image" content="http://try.haxe.org/share.png" />
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
