use https where possible

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="icon" href="http://haxe.org/favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="https://haxe.org/favicon.ico" type="image/x-icon"/>
   <link rel="shortcut icon" type="image/x-icon" href="http://www.haxe.org/favicon.ico" />
 
   <title>Try Haxe !</title>
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-  <link rel="stylesheet" type="text/css" href="http://haxe.org/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://haxe.org/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.min.css" />
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
@@ -48,7 +48,7 @@
   <nav class="section nav dark">
 	<div class="navbar navbar-fixed-top navbar-inverse">
 		<div class="navbar-inner">
-			<button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="brand haxe-logo" href="http://haxe.org/"><img alt="Haxe" height="21" onerror="this.src='http://haxe.org/img/haxe-logo-horizontal-on-dark.png'" src="http://haxe.org/img/haxe-logo-horizontal-on-dark.svg" width="107" /></a>
+			<button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="brand haxe-logo" href="https://haxe.org/"><img alt="Haxe" height="21" onerror="this.src='https://haxe.org/img/haxe-logo-horizontal-on-dark.png'" src="https://haxe.org/img/haxe-logo-horizontal-on-dark.svg" width="107" /></a>
 			
 			<a class="brand sub try" href="./" onclick="return confirm('Are you sure?')">TRY</a>
 
@@ -90,13 +90,13 @@
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Learn Haxe <b class="caret"></b></a>
 
 						<ul class="dropdown-menu">
-							<li><a href="http://haxe.org/documentation/">Introduction</a></li>
+							<li><a href="https://haxe.org/documentation/">Introduction</a></li>
 							<li class="divider"></li>
-							<li><a href="http://haxe.org/manual/">Manual</a></li>
+							<li><a href="https://haxe.org/manual/">Manual</a></li>
 							<li><a href="http://api.haxe.org">API Documentation</a></li>
 							<li class="divider"></li>
 							<li class="active"><a href="http://try.haxe.org">Try Haxe</a></li>
-							<li><a href="http://lib.haxe.org">Haxelib</a></li>
+							<li><a href="https://lib.haxe.org">Haxelib</a></li>
 							<li><a href="http://code.haxe.org">Code Cookbook</a></li>
 						</ul>
 					</li>
@@ -108,7 +108,7 @@
 							<li><a href="http://stackoverflow.com/questions/tagged/haxe"><i class="fa fa-stack-exchange"></i> Stack Overflow</a></li>
 							<li><a href="http://groups.google.com/group/haxelang?hl=en"><i class="fa fa-envelope-o"></i> Google Groups</a></li>
 							<li><a href="http://webchat.freenode.net/?channels=haxe"><i class="fa fa-comments-o"></i> IRC</a></li>
-							<li><a href="http://haxe.org/blog"><i class="fa fa-rss"></i> Blog</a></li>
+							<li><a href="https://haxe.org/blog"><i class="fa fa-rss"></i> Blog</a></li>
 							<li class="divider"></li>
 							<li><a href="https://plus.google.com/communities/103302587329918132234"><i class="fa fa-google-plus"></i> Google+</a></li>
 							<li><a href="https://www.facebook.com/haxe.org/"><i class="fa fa-facebook"></i> Facebook</a></li>
@@ -116,7 +116,7 @@
 							<li><a href="https://twitter.com/haxelang"><i class="fa fa-twitter"></i> @haxelang</a></li>
 							<li><a href="https://twitter.com/haxe_org"><i class="fa fa-twitter"></i> @haxe_org</a></li>
 							<li class="divider"></li>
-							<li><a href="http://haxe.org/foundation/contact.html">Contact</a></li>
+							<li><a href="https://haxe.org/foundation/contact.html">Contact</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -163,7 +163,7 @@ class Test {
 
                   </div>
                   <div class="control-group hx-dce-name">
-                    <label class="control-label" for="main-class">DCE <a href="http://haxe.org/manual/cr-dce.html" target="_blank"><i class="fa fa-question-circle"></i></a></label>
+                    <label class="control-label" for="main-class">DCE <a href="https://haxe.org/manual/cr-dce.html" target="_blank"><i class="fa fa-question-circle"></i></a></label>
                     <div class="controls">
 
                       <label class="radio"><input type="radio" name="dce" value="full" checked></input> Full</label>
@@ -173,7 +173,7 @@ class Test {
                     </div>
                   </div>
                   <div class="control-group hx-analyzer-name">
-                    <label class="control-label" for="main-class">Analyzer <a href="http://haxe.org/manual/cr-static-analyzer.html" target="_blank"><i class="fa fa-question-circle"></i></a></a></label>
+                    <label class="control-label" for="main-class">Analyzer <a href="https://haxe.org/manual/cr-static-analyzer.html" target="_blank"><i class="fa fa-question-circle"></i></a></a></label>
                     <div class="controls">
 
                       <label class="radio"><input type="radio" name="analyzer" value="yes" checked></input> Yes</label>
@@ -192,9 +192,9 @@ class Test {
             </div>
 			      <div class="tab-pane" id="hx-about">
               <h2>Try Haxe <small>- The Haxe Playground</small></h2>
-              <a href="http://haxe.org" target="_blank" title="Haxe"><img src="http://www.haxe.org/img/haxe-logo.svg" class="logo" onerror="this.src='http://www.haxe.org/img/haxe-logo.png'" width="90" height="90" /></a>
+              <a href="https://haxe.org" target="_blank" title="Haxe"><img src="http://www.haxe.org/img/haxe-logo.svg" class="logo" onerror="this.src='http://www.haxe.org/img/haxe-logo.png'" width="90" height="90" /></a>
               
-              <strong><a href="http://haxe.org" target="_blank" title="Haxe">Haxe</a></strong> is an awesome language that compiles to <strong>Javascript</strong>, <strong>Flash</strong>, <strong>C++</strong>, <strong>PHP</strong>, <strong>Neko</strong>, <strong>Java</strong>, <strong>C#</strong> and <strong>Python</strong>.
+              <strong><a href="https://haxe.org" target="_blank" title="Haxe">Haxe</a></strong> is an awesome language that compiles to <strong>Javascript</strong>, <strong>Flash</strong>, <strong>C++</strong>, <strong>PHP</strong>, <strong>Neko</strong>, <strong>Java</strong>, <strong>C#</strong> and <strong>Python</strong>.
               It thus allows to write applications that target native <strong>iOS</strong>, <strong>Android</strong> as well as traditional browsers (<strong>HTML5</strong> or <strong>SWF</strong>), servers and desktops (Mac, PC or Linux).
               <br clear="both" />
               <hr />
@@ -280,7 +280,7 @@ class Test {
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
-	<script src="http://haxe.org/js/bootstrap.min.js"></script>
+	<script src="https://haxe.org/js/bootstrap.min.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
   <script src="lib/CodeMirror-4/lib/codemirror.js"></script>
@@ -290,7 +290,7 @@ class Test {
   <script src="lib/CodeMirror-4/mode/xml/xml.js"></script>
   <script src="lib/CodeMirror-4/mode/css/css.js"></script>
   <script src="lib/CodeMirror-4/mode/htmlmixed/htmlmixed.js"></script>
-	<!--script src="http://haxe.org/js/bootstrap.min.js"></script-->
+	<!--script src="https://haxe.org/js/bootstrap.min.js"></script-->
   <script src="lib/bootstrap/js/bootstrap.min.js" ></script>
   <script src="lib/CodeMirror-4/addon/search/searchcursor.js"></script>
   <script src="lib/CodeMirror-4/addon/search/search.js"></script>
