--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@ class Test {
   <script src="lib/CodeMirror-4/addon/fold/foldgutter.js"></script>
   <script src="lib/CodeMirror-4/addon/fold/brace-fold.js"></script>
   <script src="lib/CodeMirror-4/addon/fold/comment-fold.js"></script>
+  <script src="lib/js/addons/show-context-info.js"></script>
   <script src="app.js?v=2"></script>
   <!-- end scripts -->
 
