--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ class Test {
         </div>
       </div>
       <div class="span6 text-muted">
-        <span class="pull-right">Haxe version: 3.2.0 release</span>
+        <span class="pull-right">Haxe version: 3.3.0 rc1</span>
       </div>
     </div>
     <div class="row-fluid">
