minor config form upgrade

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ class Test {
                     <label class="control-label" for="libs-checkbox">Target</label>
 
                     <div class="controls">
-                      <label class="radio"><input type="radio" name="target" value="JS" checked></input> Javascript</label>
-                      <label class="radio"><input type="radio" name="target" value="SWF"></input> SWF</label>
+                      <label class="radio inline"><input type="radio" name="target" value="JS" checked></input> Javascript</label>
+                      <label class="radio inline"><input type="radio" name="target" value="SWF"></input> SWF</label>
                     </div>
 
                   </div>
@@ -166,9 +166,9 @@ class Test {
                     <label class="control-label" for="main-class">DCE <a href="https://haxe.org/manual/cr-dce.html" target="_blank"><i class="fa fa-question-circle"></i></a></label>
                     <div class="controls">
 
-                      <label class="radio"><input type="radio" name="dce" value="full" checked></input> Full</label>
-                      <label class="radio"><input type="radio" name="dce" value="no"></input> No</label>
-                      <label class="radio"><input type="radio" name="dce" value="std"></input> Std</label>
+                      <label class="radio inline"><input type="radio" name="dce" value="full" checked></input> Full</label>
+                      <label class="radio inline"><input type="radio" name="dce" value="no"></input> No</label>
+                      <label class="radio inline"><input type="radio" name="dce" value="std"></input> Std</label>
 
                     </div>
                   </div>
@@ -176,8 +176,8 @@ class Test {
                     <label class="control-label" for="main-class">Analyzer <a href="https://haxe.org/manual/cr-static-analyzer.html" target="_blank"><i class="fa fa-question-circle"></i></a></a></label>
                     <div class="controls">
 
-                      <label class="radio"><input type="radio" name="analyzer" value="yes" checked></input> Yes</label>
-                      <label class="radio"><input type="radio" name="analyzer" value="no"></input> No</label>
+                      <label class="radio inline"><input type="radio" name="analyzer" value="yes" checked></input> Yes</label>
+                      <label class="radio inline"><input type="radio" name="analyzer" value="no"></input> No</label>
 
                     </div>
                   </div>
