--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@ class Test {
   <script src="lib/CodeMirror-4/mode/htmlmixed/htmlmixed.js"></script>
 	<!--script src="https://haxe.org/js/bootstrap.min.js"></script-->
   <script src="lib/bootstrap/js/bootstrap.min.js" ></script>
-  <script src="lib/CodeMirror-4/addon/search/searchcursor.js"></script>
+  <!--<script src="lib/CodeMirror-4/addon/search/searchcursor.js"></script>
   <script src="lib/CodeMirror-4/addon/search/search.js"></script>
-  <script src="lib/CodeMirror-4/addon/dialog/dialog.js"></script>
+  <script src="lib/CodeMirror-4/addon/dialog/dialog.js"></script>-->
   <script src="lib/CodeMirror-4/addon/comment/comment.js"></script>
   <script src="lib/CodeMirror-4/addon/lint/lint.js"></script>
   <script src="lib/CodeMirror-4/addon/wrap/hardwrap.js"></script>
