--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ class Test {
                     </div>
                   </div>
                   <div class="control-group hx-analyzer-name">
-                    <label class="control-label" for="main-class">Analyzer <a href="https://haxe.org/manual/cr-static-analyzer.html" target="_blank"><i class="fa fa-question-circle"></i></a></a></label>
+                    <label class="control-label" for="main-class">Analyzer optimize <a href="https://haxe.org/manual/cr-static-analyzer.html" target="_blank"><i class="fa fa-question-circle"></i></a></a></label>
                     <div class="controls">
 
                       <label class="radio inline"><input type="radio" name="analyzer" value="yes" checked></input> Yes</label>
